--- a/overlay_penguin_portrait_futuristic.html
+++ b/overlay_penguin_portrait_futuristic.html
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --bg-panel: rgba(20, 30, 40, 0.75);
+      --bg-panel: rgba(20, 30, 40, 0.7);
       --accent: #73cfff;
       --text: #fff;
     }
     * {margin:0;padding:0;box-sizing:border-box;}
     body {
-      background: linear-gradient(to bottom, #0a1a2f, #153a5c);
+      background: transparent;
       font-family: Arial, sans-serif;
       color: var(--text);
       display: flex;
@@ -24,28 +24,28 @@
       flex-direction: column;
       align-items: center;
       gap: 12px;
-      width: 360px;
+      width: 500px;
     }
     .game-container {
       position: relative;
       width: 100%;
-      aspect-ratio: 9/16;
+      aspect-ratio: 4/3;
       background: #000;
       border-radius: 14px;
-      border: 4px solid rgba(115,207,255,0.35);
-      box-shadow: 0 0 25px rgba(115,207,255,0.4);
+      border: 3px solid rgba(115,207,255,0.35);
+      box-shadow: 0 0 18px rgba(115,207,255,0.4);
       overflow: hidden;
     }
     .title-box {
       position: absolute;
-      top: -14px;
+      top: -16px;
       left: 50%;
       transform: translateX(-50%);
       padding: 4px 12px;
       background: var(--bg-panel);
       border: 2px solid rgba(115,207,255,0.25);
-      border-radius: 8px;
-      font-size: 12px;
+      border-radius: 10px;
+      font-size: 13px;
       font-weight: bold;
       text-shadow: 0 0 6px rgba(115,207,255,0.8);
     }
@@ -57,11 +57,11 @@
       display: flex;
       align-items: center;
       gap: 6px;
-      padding: 4px 8px;
+      padding: 4px 10px;
       background: var(--bg-panel);
       border-radius: 8px;
       border: 2px solid rgba(115,207,255,0.25);
-      font-size: 11px;
+      font-size: 12px;
       opacity: 0;
       transition: opacity 0.8s;
     }
@@ -72,7 +72,7 @@
     }
     .panel-box {
       flex: 1;
-      min-height: 100px;
+      min-height: 110px;
       padding: 8px;
       border-radius: 12px;
       background: var(--bg-panel);
@@ -82,7 +82,7 @@
       align-items: center;
     }
     .panel-header {
-      font-size: 11px;
+      font-size: 12px;
       font-weight: bold;
       color: var(--accent);
       margin-bottom: 6px;
@@ -90,7 +90,7 @@
     }
     .follower-card {
       position: relative;
-      width: 70px; height: 70px;
+      width: 80px; height: 80px;
     }
     .follower-card svg {
       transform: rotate(-90deg);
@@ -115,15 +115,15 @@
       position: absolute;
       top: 50%; left: 50%;
       transform: translate(-50%,-50%);
-      font-size: 11px;
+      font-size: 12px;
       font-weight: bold;
     }
     .map-text {
-      font-size: 12px;
+      font-size: 13px;
       text-align: center;
       white-space: normal;
       word-break: break-word;
-      max-height: 40px;
+      max-height: 42px;
       overflow: hidden;
     }
     .map-text::after {
@@ -137,16 +137,16 @@
     }
     .music-box {
       width: 100%;
-      padding: 6px 10px;
+      padding: 8px 12px;
       background: var(--bg-panel);
       border-radius: 10px;
       border: 2px solid rgba(115,207,255,0.25);
-      font-size: 12px;
+      font-size: 13px;
       text-align: center;
     }
     .note-panel {
       width: 100%;
-      padding: 6px 10px;
+      padding: 8px 12px;
       background: var(--bg-panel);
       border-radius: 10px;
       border: 2px solid rgba(115,207,255,0.25);
@@ -233,11 +233,11 @@
       socialBox.querySelector("i").className="fab "+s.icon;
       socialText.textContent=s.text;
       socialBox.style.opacity=1;
-      setTimeout(()=>{socialBox.style.opacity=0;},5500);
+      setTimeout(()=>{socialBox.style.opacity=0;},4500);
       sidx=(sidx+1)%socials.length;
     }
     cycleSocials();
-    setInterval(cycleSocials,6000);
+    setInterval(cycleSocials,5000);
   </script>
 </body>
 </html>
