--- a/note.html
+++ b/note.html
@@ -18,22 +18,23 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      flex-wrap: wrap; /* biar rapih di layar kecil */
+      flex-wrap: wrap;
     }
     .footer-card {
-      background: white;
+      background: rgba(20, 40, 70, 0.85); /* semi-transparan biru navy */
+      color: #e6f7ff; /* biru muda terang */
       padding: 20px;
       border-radius: 16px;
       font-size: 1rem;
       line-height: 1.6;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2), 0 0 10px #b3e0ff inset;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4), 0 0 10px #66ccff inset;
       transition: transform 0.2s, box-shadow 0.2s;
       max-width: 280px;
       word-wrap: break-word;
     }
     .footer-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 0 25px rgba(0,0,0,0.3), 0 0 15px #66ccff inset;
+      box-shadow: 0 0 25px rgba(0,0,0,0.6), 0 0 15px #99e6ff inset;
     }
     .footer-card ul {
       margin: 10px 0 0;
@@ -42,14 +43,16 @@
     .footer-card li {
       margin-bottom: 6px;
     }
+    .footer-card strong {
+      color: #b3e0ff; /* aksen heading */
+    }
   </style>
 </head>
 <body>
   <div class="footer">
     <div class="footer-card">
       <strong>FORMAT REQ LAGU:</strong><br>
-      !play judul - artist<br>
-      !skip
+      !play judul - artist
     </div>
     <div class="footer-card">
       <strong>LINK:</strong>
