--- a/note.html
+++ b/note.html
@@ -41,7 +41,7 @@
       padding-left: 20px;
     }
     .footer-card li {
-      margin-bottom: 6px;
+      margin-bottom: 5px;
     }
     .footer-card strong {
       color: #b3e0ff; /* aksen heading */
@@ -60,6 +60,7 @@
         <li>Profile</li>
         <li>Invite Map</li>
         <li>Discord</li>
+        <li>Donasi</li>
       </ul>
       <p><em>Cek di Bio</em></p>
     </div>
