--- a/note.html
+++ b/note.html
@@ -60,7 +60,7 @@
         <li>Profile</li>
         <li>Invite Map</li>
         <li>Discord</li>
-        <li>Donasi</li>
+        <!--li>Donasi</li-->
       </ul>
       <p><em>Cek di Bio</em></p>
     </div>
